// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyApps should match a snapshot when LOADING false 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "clientManageRoute",
          "pathname": "/manage",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "clientManageRoute",
              "pathname": "/manage",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "clientManageRoute",
            "pathname": "/manage",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <AppsManagement>
        <ErrorBoundary>
          <H3
            isHeadingSection={true}
          >
            <h3
              className="title is-3 is-heading-section"
              id=""
            >
              Manage Apps
            </h3>
          </H3>
          <AppList
            infoType="INSTALLED_APPS_EMPTY"
            list={Array []}
            loading={false}
            onCardClick={[Function]}
            onSettingsClick={[Function]}
          >
            <div
              className="overflow-hidden mb-4"
            >
              <Helper
                variant="info"
              >
                <div
                  className="notification helper-wrap helper-info"
                >
                  It looks like you haven’t installed any Apps yet. Have a look at what’s available by clicking ‘Browse’ from the menu.
                </div>
              </Helper>
            </div>
          </AppList>
          <Pagination
            onChange={[Function]}
            pageNumber={1}
            pageSize={12}
            totalCount={0}
          />
        </ErrorBoundary>
      </AppsManagement>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`MyApps should match a snapshot when LOADING true 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "clientManageRoute",
          "pathname": "/manage",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "clientManageRoute",
              "pathname": "/manage",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "clientManageRoute",
            "pathname": "/manage",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <AppsManagement>
        <ErrorBoundary>
          <H3
            isHeadingSection={true}
          >
            <h3
              className="title is-3 is-heading-section"
              id=""
            >
              Manage Apps
            </h3>
          </H3>
          <Loader>
            <div
              className="loader-spinner body"
              data-test=""
            >
              <div />
              <div />
              <div />
              <div />
            </div>
          </Loader>
        </ErrorBoundary>
      </AppsManagement>
    </Router>
  </MemoryRouter>
</Provider>
`;

exports[`MyApps should match a snapshot when isAdmin false 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <MemoryRouter
    initialEntries={
      Array [
        Object {
          "key": "clientManageRoute",
          "pathname": "/manage",
        },
      ]
    }
  >
    <Router
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "clientManageRoute",
              "pathname": "/manage",
              "search": "",
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "clientManageRoute",
            "pathname": "/manage",
            "search": "",
          },
          "push": [Function],
          "replace": [Function],
        }
      }
    >
      <AppsManagement>
        <ErrorBoundary>
          <H3
            isHeadingSection={true}
          >
            <h3
              className="title is-3 is-heading-section"
              id=""
            >
              Manage Apps
            </h3>
          </H3>
          <AppList
            infoType="INSTALLED_APPS_EMPTY"
            list={Array []}
            loading={false}
            onCardClick={[Function]}
            onSettingsClick={[Function]}
          >
            <div
              className="overflow-hidden mb-4"
            >
              <Helper
                variant="info"
              >
                <div
                  className="notification helper-wrap helper-info"
                >
                  It looks like you haven’t installed any Apps yet. Have a look at what’s available by clicking ‘Browse’ from the menu.
                </div>
              </Helper>
            </div>
          </AppList>
          <Pagination
            onChange={[Function]}
            pageNumber={1}
            pageSize={12}
            totalCount={0}
          />
        </ErrorBoundary>
      </AppsManagement>
    </Router>
  </MemoryRouter>
</Provider>
`;
